# expedition33-population-simulation

./: README.md  main.py  pyproject.toml
data/raw/: france_demographics_1901.csv  france_demographics_1901_by_age_group.csv  stats.txt
src/: plot.py  simulate.py
