[project]
name = "expedition33-population-simulation"
version = "0.1.0"
description = ""
authors = [
    {name = "Romain Florentz",email = "romflorentz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire (>=0.7.0,<0.8.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
